--- a/stock/package.json
+++ b/stock/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -14,7 +15,9 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.13",
     "socket.io-client": "^4.5.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
     "webpack": "^5.74.0"
   },
