--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
     "nodemon": "^2.0.19",
+    "os-utils": "^0.0.14",
     "socket.io": "^4.5.1",
     "ws": "^8.8.1"
   },
